--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     implementation "ss.anoop:awesome-textinput-layout:1.0.3"
+
+    implementation 'com.github.michaldrabik:classicmaterialtimepicker:1.1.0'
 }
