--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     implementation "ss.anoop:awesome-textinput-layout:1.0.3"
 
     implementation 'com.github.michaldrabik:classicmaterialtimepicker:1.1.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
