--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.google.firebase:firebase-analytics:17.4.3'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
-    implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
-
-    implementation 'com.github.medyo:fancybuttons:1.9.1'
 
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
 
@@ -58,10 +54,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
 
+    //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
-    implementation "ss.anoop:awesome-textinput-layout:1.0.3"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     implementation 'com.github.michaldrabik:classicmaterialtimepicker:1.1.0'
 
@@ -70,6 +66,4 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.3.0'
-
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 }
