--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,17 +42,20 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
 
+    implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
+
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha03"
 
     implementation 'androidx.room:room-runtime:2.2.5'
     implementation 'androidx.room:room-rxjava2:2.2.5'
     kapt 'androidx.room:room-compiler:2.2.5'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4'
 
     //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.0.0'
@@ -66,4 +69,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.3.0'
+
+    implementation 'com.opensooq.supernova:gligar:1.1.0'
+    implementation 'id.zelory:compressor:3.0.0'
 }
