--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
 
     implementation 'com.opensooq.supernova:gligar:1.1.0'
     implementation 'id.zelory:compressor:3.0.0'
+
+    implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.1'
 }
