--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,14 @@ android {
             keyPassword 'RabbiZidniIlm4'
         }
     }
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion '30.0.0'
     defaultConfig {
         applicationId "io.muhwyndhamhp.riwayat"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 6
-        versionName "0.0.4"
+        versionCode 7
+        versionName "0.0.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
